k8s/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: nazina/order-service:latest
        command: ["uvicorn"]
        args: ["main:app", "--host", "0.0.0.0", "--port", "8001"]
        ports:
        - containerPort: 8001
