k8s/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: nazina/user-service:latest
        command: ["uvicorn"]
        args: ["main:app", "--host", "0.0.0.0", "--port", "8000"]
        ports:
        - containerPort: 8000
