k8s/elasticsearach-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: microservices
spec:
  selector:
    app: elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
  type: ClusterIP
